--- a/examples/android/mavlink-udp/src/main/res/layout/activity_main.xml
+++ b/examples/android/mavlink-udp/src/main/res/layout/activity_main.xml
@@ -116,29 +116,43 @@
             android:text="@string/loop_stop"
             android:visibility="gone" />
 
-        <TextView
-            android:id="@+id/text_feedback"
+        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:fontFamily="monospace"
-            android:paddingRight="8dp"
-            android:textColor="#000" />
+            android:paddingTop="8dp"
+            android:stretchColumns="1">
 
-        <TextView
-            android:id="@+id/text_buttons"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
-            android:fontFamily="monospace"
-            android:paddingRight="8dp"
-            android:textColor="#000" />
+            <TableRow>
+
+                <TextView
+                    android:id="@+id/text_feedback"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="top|left"
+                    android:fontFamily="monospace"
+                    android:paddingTop="8dp"
+                    android:textColor="#000" />
+            </TableRow>
+
+            <TableRow>
+
+                <TextView
+                    android:id="@+id/text_buttons"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="top|left"
+                    android:fontFamily="monospace"
+                    android:paddingTop="8dp"
+                    android:textColor="#000" />
+            </TableRow>
+        </TableLayout>
 
         <!-- 1, X, pitch -->
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="3dip">
+            android:layout_margin="3dip"
+            android:paddingTop="8dp">
 
             <TextView
                 android:id="@+id/Seekbar1Text"
